--- a/src/main/resources/templates/trump.html
+++ b/src/main/resources/templates/trump.html
@@ -15,7 +15,7 @@
       <li><a href="/doubt">ダウト</a></li>
       <li><a href="/memory">神経衰弱</a></li>
       <li><a href="/trump/the_game">ザ・ゲーム</a></li>
-      <li><a href="/shitinarabe">七並べ(4人)</a></li>
+      <li><a href="/shitinarabe">七並べ</a></li>
     </ol>
   </tbody>
   <tbody sec:authorize="hasRole('ROLE_ADMIN')">
@@ -23,7 +23,7 @@
       <li><a href="/doubtFight">ダウト(ゲームを見る)</a></li>
       <li><a href="/memory">神経衰弱</a></li>
       <li><a href="/trump/the_game">ザ・ゲーム(ホスト)</a></li>
-      <li><a href="/shitinarabe">七並べ(4人)</a></li>
+      <li><a href="/shitinarabe">七並べ</a></li>
     </ol>
   </tbody>
 </body>
