--- a/src/main/resources/templates/doubt.html
+++ b/src/main/resources/templates/doubt.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <a href="/trump">ゲーム選択へ戻る</a>
+
   <h1>ダウト (Doubt Game)!</h1>
 
   <div th:if="${chamber}">
@@ -20,7 +22,7 @@
   <br />
 
   <div>
-    <h3>入室</h3>
+    <h3>部屋入室</h3>
   </div>
   <div><a href="/doubtMatch">待機部屋へ</a></div>
   <div>※順番に部屋に割り当てられます.</div>
